--- a/phone.html
+++ b/phone.html
@@ -614,7 +614,7 @@
                 <span class="material-symbols-outlined">widgets</span>
             </button>
             <button class="nav-button" aria-label="AI">
-                <img src="zenus.png" alt="Zenus" height="24">
+                <img src="venuth.png" alt="Zenus" height="24">
             </button>
             <button class="nav-button" aria-label="Profile">
                 <span class="material-symbols-outlined">person</span>
